--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 			</head>
 	<body><div class="heart"></div>
 		<div class="heart2"></div>
-		<div class="text"><h></h>Кисонька я скучаю :(</h1></div>
+		<div class="text"><h></h>Мимишность)</h1></div>
 		
 		
 	</body>
